--- a/templates/memorize.html
+++ b/templates/memorize.html
@@ -70,6 +70,10 @@
 
     <div class="row">
         <div class="col-xs-12 text-center">
+{#            <a href="{{ url_for('', card_id=card.id, card_type=card_type) }}" class="btn btn-success btn-lg">#}
+{#                <i class="fa fa-check"></i>#}
+{#                I Know It#}
+{#            </a>#}
             <a href="javascript:" class="btn btn-primary btn-lg flipCard">
                 <i class="fa fa-exchange"></i>
                 Flip Card
